# daily

./: Cargo.toml  LICENSE
.github/workflows/: ci.yaml
src/: daily.rs  main.rs
